# private-mail-bundle

./: .gitignore  README.md
procmail/: .gitignore  Cargo.toml
procmail/src/: initial.rs  main.rs  owned.rs  save.rs
rust_common/: Cargo.toml
rust_common/src/: lib.rs  owned.rs
server/: Cargo.toml  config.toml
server/router_attr/: Cargo.toml
server/router_attr/src/: lib.rs
server/router_attr_wrapper/: Cargo.toml
server/router_attr_wrapper/src/: lib.rs
server/src/: config.rs  lib.rs  main.rs  routes.rs
server/src/routes/: statics.rs
web/: .eslintrc.js  package.json  tsconfig.index.json  tsconfig.json
web/src/: index.ts
