[package]
name = "server"
version = "0.1.0"
authors = ["dev"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_common = { path = "../rust_common" }
router_attr_wrapper = { path = "./router_attr_wrapper" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.5"
rouille = "3.0.0"
structopt = "0.3.14"
log = "0.4.8"
stderrlog = "0.4.3"
url = "2.1.1"


[workspace]
members = [
    "router_attr",
    "router_attr_wrapper"
]
